--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
         <li>Grand Forks, ND</li>
         <li>Fort Collins, CO</li>
       </ul>
+    <h1>Ordered List</h1>
+      <ol>
+        <li>New York City, NY</li>
+        <li>Hollywood, CA</li>
+        <li>Sydney, AUS</li>
+      </ol>
   </body>
 </html>
