--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	</head>
 	<body>
     <h1>Unordered List</h1>
+      <p>I was born in Colorado Springs until around middle school when I moved to Brentwood, TN.  I stayed there until college when I moved to ND to attend college at the University of North Dakota.  Finally after college I moved down to Fort Collins.
+      </p>
       <ul>
         <li>Colorado Springs, CO</li>
         <li>Brentwood, TN</li>
@@ -12,6 +14,8 @@
         <li>Fort Collins, CO</li>
       </ul>
     <h1>Ordered List</h1>
+      <p>I would like to visit these three cities due to my never having been there.
+      </p>
       <ol>
         <li>New York City, NY</li>
         <li>Hollywood, CA</li>
