--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
       <p>I was born in Colorado Springs until around middle school when I moved to Brentwood, TN.  I stayed there until college when I moved to ND to attend college at the University of North Dakota.  Finally after college I moved down to Fort Collins.
       </p>
       <ul>
-        <li>Colorado Springs, CO</li>
-        <li>Brentwood, TN</li>
-        <li>Grand Forks, ND</li>
-        <li>Fort Collins, CO</li>
+        <li>Colorado Springs, CO<span>&#33;</span></li>
+        <li>Brentwood, TN<span>&#33;</span></li>
+        <li>Grand Forks, ND<span>&#33;</span></li>
+        <li>Fort Collins, CO<span>&#33;</span></li>
       </ul>
     <h1>Ordered List</h1>
       <p>I would like to visit these three cities due to my never having been there.
       </p>
       <ol>
-        <li>New York City, NY</li>
-        <li>Hollywood, CA</li>
-        <li>Sydney, AUS</li>
+        <li><strong>New York City, NY</strong></li>
+        <li><em>Hollywood, CA</em></li>
+        <li><strong>Sydney, AUS</strong></li>
       </ol>
   </body>
 </html>
